deploy/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate
  failurePolicy: Fail
  name: mutate.resourcequota.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tenantresourcequotas
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate
  failurePolicy: Fail
  name: mutate.environment.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - environments
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate
  failurePolicy: Fail
  name: mutate.gateway.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tenantgateways
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate
  failurePolicy: Fail
  name: mutate.ingress.dev
  rules:
  - apiGroups:
    - extensions
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /label-injector
  failurePolicy: Ignore
  name: mutate.label-injector.dev
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - configmaps
    - secrets
    - services
    - daemonsets
    - deployments
    - statefulsets
    - jobs
    - cronjobs
    - persistentvolumeclaims
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /label-injector
  failurePolicy: Ignore
  name: mutate.label-injector-logging.dev
  rules:
  - apiGroups:
    - logging.banzaicloud.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - flows
    - outputs
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.tenant.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    resources:
    - tenants
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantresourcequota.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantresourcequotas
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantnetworkpolicy.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantnetworkpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantgateway.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantgateways
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.environment.dev
  rules:
  - apiGroups:
    - gems.kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - environments
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: valiate.namespace.dev
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - '*'
    operations:
    - DELETE
    resources:
    - namespaces
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: validate.istiogateway.dev
  rules:
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gateways
  sideEffects: None
